--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "thfradio",
-  "version": "0.1.0",
+  "version": "3.0.0",
   "private": true,
+  "description": "THF Radio website",
+  "author": "Bruno SJ",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -30,16 +33,17 @@
     "react-markdown": "^9.0.3",
     "react-player": "^2.16.0",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^3.0.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "22.13.1",
+    "@types/node": "22.13.4",
     "@types/react": "19.0.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
     "postcss": "^8.5.2",
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.6",
     "typescript": "5.7.3"
