--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@plaiceholder/next": "^3.0.0",
-    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/ical": "^0.8.3",
     "@widgetbot/react-embed": "^1.9.0",
     "clsx": "^2.1.1",
@@ -21,31 +21,32 @@
     "embla-carousel-auto-height": "8.5.2",
     "embla-carousel-autoplay": "8.5.2",
     "embla-carousel-react": "8.5.2",
-    "next": "^15.1.7",
-    "next-intl": "^3.26.3",
+    "next": "^15.2.2",
+    "next-intl": "^4.0.1",
     "node-fetch": "^3.3.2",
     "node-ical": "^0.20.1",
     "plaiceholder": "^3.0.0",
     "react": "19.0.0",
+    "react-audio-play": "^1.0.4",
     "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.4.0",
-    "react-markdown": "^9.0.3",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^9.1.0",
     "react-player": "^2.16.0",
     "sharp": "^0.33.5",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "22.13.4",
     "@types/react": "19.0.8",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "^15.1.7",
-    "postcss": "^8.5.2",
-    "prettier": "^3.5.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.22.0",
+    "eslint-config-next": "^15.2.2",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.13",
     "typescript": "5.7.3"
   }
 }
