--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "@plaiceholder/next": "^3.0.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/ical": "^0.8.3",
+    "@types/react-dom": "19.2.1",
     "@widgetbot/react-embed": "^1.9.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-auto-height": "8.6.0",
     "embla-carousel-autoplay": "8.6.0",
     "embla-carousel-react": "8.6.0",
-    "next": "^15.5.6",
+    "next": "^15.5.7",
     "next-intl": "^4.4.0",
     "node-fetch": "^3.3.2",
     "node-ical": "^0.20.1",
     "plaiceholder": "^3.0.0",
-    "react": "19.1.0",
+    "react": "19.2.1",
     "react-audio-play": "^1.0.4",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -39,7 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "22.15.21",
-    "@types/react": "19.1.5",
+    "@types/react": "19.2.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.38.0",
     "eslint-config-next": "15.4.0-canary.51",
