--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "embla-carousel-auto-height": "8.6.0",
     "embla-carousel-autoplay": "8.6.0",
     "embla-carousel-react": "8.6.0",
-    "next": "^15.5.7",
+    "next": "15.5.9",
     "next-intl": "^4.4.0",
     "node-fetch": "^3.3.2",
     "node-ical": "^0.20.1",
